# zip

./: README.md  README_zh-CN.md  package.json  package.oo.yaml  pnpm-lock.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: layer.yml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/test-zip-batch-compress/: .flow.ui.oo.json  flow.oo.yaml
flows/test-zip-create/: .flow.ui.oo.json  flow.oo.yaml
flows/test-zip-create-encrypted/: .flow.ui.oo.json  flow.oo.yaml
flows/test-zip-extract/: .flow.ui.oo.json  flow.oo.yaml
flows/test-zip-extract-encrypted/: .flow.ui.oo.json  flow.oo.yaml
flows/test-zip-get-info/: .flow.ui.oo.json  flow.oo.yaml
flows/test-zip-integration/: .flow.ui.oo.json  flow.oo.yaml
flows/test-zip-list-contents/: .flow.ui.oo.json  flow.oo.yaml
flows/test-zip-validate/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
tasks/extract_zip/: __init__.py  task.oo.yaml
tasks/file-to-zip/: main.ts  task.oo.yaml
tasks/unzip/: main.ts  task.oo.yaml
tasks/zip-add-files/: __init__.py  task.oo.yaml
tasks/zip-batch-compress/: __init__.py  task.oo.yaml
tasks/zip-compress-level/: __init__.py  task.oo.yaml
tasks/zip-convert-encoding/: __init__.py  task.oo.yaml
tasks/zip-create/: __init__.py  task.oo.yaml
tasks/zip-create-encrypted/: __init__.py  task.oo.yaml
tasks/zip-extract/: __init__.py  task.oo.yaml
tasks/zip-extract-encrypted/: __init__.py  task.oo.yaml
tasks/zip-extract-flat/: __init__.py  task.oo.yaml
tasks/zip-extract-selective/: __init__.py  task.oo.yaml
tasks/zip_dir/: __init__.py  (+1 more)
(+13 files in other folders)
