[project]
name = "newzip"
version = "0.1.0"
description = ""
authors = [
    {name = "shaun",email = "beingswu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pyzipper (>=0.3.6,<0.4.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "newzip", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
